Added the recipes to home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1> Odin Recipes </h1>
     <a href="recipes/wasabi.html"> Wasabi Recipe </a>
+    <a href="recipes/miso-ramen.html"> Beef Miso Ramen</a>
+    <a href="recipes/mochi-muffin.html"> Mochi Muffins</a>
 
     
 </body>
