Modified the image links

--- a/recipes/miso-ramen.html
+++ b/recipes/miso-ramen.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1> Beef Miso Ramen Recipe</h1>
+    <img src ="https://www.allrecipes.com/thmb/_7xd4kS366bm0oHubdEb6r3jXjo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9020363-860f0064b2054217a473ed81737e2483.jpg" alt="miso ramem"> 
+
     <p> This flavorful bowl of miso ramen is full of delicious flavors<br>
          that will make your palate sing! <br>
          If you've been dreaming of Japanese cuisine,<br>
