--- a/recipes/mochi-muffin.html
+++ b/recipes/mochi-muffin.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Mochi Muffins Recipe</h1>
+    <img src="https://www.allrecipes.com/thmb/GcVOFhxFXJGmcXVjNihWrTveL1M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7565482-mochi-muffins-mfs-4x3-dacfcae02ceb4538a14ef9cb9d950b31.jpg">
     <p> These yummy mochi muffins made with rice flour and coconut milk make <br> 
          a great breakfast, snack, or casual dessert.</p>>
          <ul> 
